# stoplight

./: .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml  report.md
anonypg/: __init__.py  strategies.py
docs/: REPORT.md  index.html  search.js
examples/: demo.py
stoplight/: __init__.py  strategies.py
test/: conftest.py  test_mock.py
