[tool.poetry]
name = "anonypg"
version = "0.0.1"
description = "A data anonymization layer around asyncpg"
authors = ["Elias Gabriel <egabriel@olin.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
